platform/src/objects/Report_To_Depot__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Memory__c</fullName>
        <label>Additional Memory?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_hard_drive_Enter_quantity__c</fullName>
        <label>Additional hard drive? Enter quantity</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Site_Contact_Phone__c</fullName>
        <label>Alt. Site Contact Phone</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Cosmic_Record_Name__c</fullName>
        <label>DMS/Cosmic Record Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_or_Cosmic_Image__c</fullName>
        <label>DMS or Cosmic Image?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_to_DVI_adaptor_Enter_quantity__c</fullName>
        <label>DP to DVI adaptor? Enter quantity</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Mgr__c</fullName>
        <label>Deployment Mgr.</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot_Report_VNet_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depot Report VNet Order</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reports To Depots</relationshipLabel>
        <relationshipName>Reports_To_Depots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docking_station_Enter_quantity__c</fullName>
        <label>Docking station? Enter quantity</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUC_Coordinator_PM_Email__c</fullName>
        <defaultValue>&quot;wfdigitalsignage@wellsfargo.com&quot;</defaultValue>
        <label>EUC Coordinator/PM: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Equipment_Order_Date__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Order_SR__c</fullName>
        <formula>&quot;SR-&quot; &amp;  Depot_Report_VNet_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Order SR#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyboard_Enter_Quantity__c</fullName>
        <label>Keyboard? Enter Quantity</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN_ID__c</fullName>
        <label>LAN ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Laptop_Desktop_Accessories__c</fullName>
        <label>Laptop / Desktop / Accessories</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <formula>TEXT( Depot_Report_VNet_Order__r.LOB__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Computer_Cube__c</fullName>
        <label>Location of Computer (Cube #)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_OU__c</fullName>
        <label>Machine OU</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Apps_Package_Included__c</fullName>
        <label>Manual Apps (Package Included)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Project_SR__c</fullName>
        <label>Master Project SR #</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Coordinator_DMS_Record_Contact__c</fullName>
        <label>Migration Coordinator DMS Record Contact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Enter_Quantity__c</fullName>
        <label>Monitor? Enter Quantity</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mouse_Enter_Quantity__c</fullName>
        <label>Mouse? Enter Quantity</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Computer_Name__c</fullName>
        <label>Old Computer Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Serial__c</fullName>
        <label>Old Serial #</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_AU__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Depot_Billing_AU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner AU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Model__c</fullName>
        <formula>TEXT( Depot_Report_VNet_Order__r.Depot_PC_Model__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player_Code_Depot__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Player_Code_Depot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Player Code - Depot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Requested_Delivery_Date_Depot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Shipping_Method__c</fullName>
        <formula>TEXT( Depot_Report_VNet_Order__r.Depot_Shipping_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Shipping Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Y_N__c</fullName>
        <label>Residential Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_Contact_Name__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Ship_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To: Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To:City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_MAC_Code__c</fullName>
        <label>Ship To:MAC Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone_Number__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To:Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_ST__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To:ST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To:Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_AU__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Depot_Billing_AU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping AU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_ISO__c</fullName>
        <label>Special Instructions (ISO)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_ID__c</fullName>
        <label>Stamp ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Memory_Gb_Enter_Amount__c</fullName>
        <label>Total Memory (Gb) Enter Amount</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_AU__c</fullName>
        <formula>Depot_Report_VNet_Order__r.Depot_Billing_AU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User AU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WFDC_version__c</fullName>
        <label>WFDC version #</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win7_Readiness_verified_Y_N__c</fullName>
        <label>Win7 Readiness verified Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Report To Depot</label>
    <nameField>
        <label>Report To Depot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports To Depots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>